actual old quickstart page from trac